--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,5 @@
 # Environment Variables
-MONGODB_URI=${MONGODB_URI}
+MONGODB_URL=${MONGODB_URL}
 PORT=${PORT}
 PWD_SECRET=${PWD_SECRET}
 API_URL=${API_URL}
